@@ -60,7 +60,10 @@ Changes in backwards compatibility policy
   CREATE*, IndexWriter would make a first empty commit. If you need that 
   behavior you can call writer.commit()/close() immediately after you create it.
   (Shai Erera, Mike McCandless)
-  
+
+* LUCENE-2733: Removed public constructors of utility classes with only static
+  methods to prevent instantiation.  (Uwe Schindler)
+
 * LUCENE-2602: The default (LogByteSizeMergePolicy) merge policy now
   takes deletions into account by default.  You can disable this by
   calling setCalibrateSizeByDeletes(false) on the merge policy.  (Mike
